新增：看板图表主题新增titleTheme、legendTheme属性，新增用于设置字体大小的fontSize属性；
新增：数据集新增【可变模型】特性，移除数据集属性必填规则，用于支持数据结构不固定的数据集；
修复：修复未授权用户仍能打开看板展示链接的BUG；
修复：修复Excel数据集有空值单元格时，会出现值串列的BUG；
修复：修复看板可视编辑模式刷新操作后切换至源码模式未同步源码的BUG；
修复：修复看板可视编辑模式删除元素后未重置元素节点路径信息的BUG；
修复：修复SQL数据集未选择数据源时SQL自动补全报错的BUG；
修复：修复数据源导入/导出数据页面表格宽度未填满的BUG；
修复：修复新建看板全局资源存储路径包含新目录时保存报错的BUG；
改进：看板可视编辑模式添加快捷执行按钮，点击可直接执行上次操作；
改进：看板可视编辑模式删除元素/解绑图表操作改为需确认执行；
改进：看板可视编辑模式图表选项编辑文本域改为格式化的文本编辑器；
改进：看板可视编辑模式图表选项支持设置为图表选项JS变量名；
改进：看板可视编辑模式刷新页面后保持元素边线状态；
改进：看板源码编辑模式支持代码折叠；
改进：看板编辑页面的图表列表面板改为可拖动；
改进：自定义图表默认渲染为数据JSON字符串列表而非表格，避免无法显示完整数据的问题；
改进：系统图表支持库ECharts版本由5.2.2升级至5.3.1；


-----------------------------------------
--v3.0.1
-----------------------------------------

修复：SpringBoot版本由2.6.4升级至2.6.6，修复其2.6.4版本存在的RCE漏洞；


-----------------------------------------
--v3.1.0
-----------------------------------------

新增：内置图表新增地图热力图、主题河流图、象形柱图；
新增：内置表格图表新增carousel.enable="auto"配置项，可设置仅在表格高度溢出时开启轮播；
新增：看板JS对象新增originalDataIndex()函数，弃用类似功能的旧函数；
新增：图表JS对象新增originalDataIndex()、originalDataIndexes()函数，弃用类似功能的旧函数；
新增：图表JS对象新增eventOriginalDataIndex()函数，弃用类似功能的旧函数；
新增：图表JS对象新增eventNew()函数，弃用类似功能的旧函数；
修复：修复看板源码编辑模式输入"chart."后未打开图表API自动补全列表的BUG；
修复：修复看板可视编辑模式设置图表主题会清除源码模式设置的其他主题属性的BUG；
改进：看板源码编辑模式支持自动补全括号和引号；
改进：看板可视编辑模式图表主题支持设置字体尺寸；
改进：图表编辑页面禁用【实时】刷新间隔功能，避免导致误操作；
改进：图表插件可设置为属于多个类别；
改进：CSV/Excel/JSON数据集新增缓存支持，提高图表访问性能；
改进：新建数据源测试连接时校验URL是否允许连接；
改进：数据源管理页面查询条件输入域改为采用CodeMirror代码编辑器；
改进：数据源编辑页面添加URL输入提示，完善辅助设置按钮；
改进：改进数据源连接尝试策略，避免不必要的二次尝试导致长时间无反应；
改进：图表支持库ECharts版本由5.3.1升级至5.3.2；


-----------------------------------------
--v3.2.0
-----------------------------------------

新增：内置图表新增得分环、阶段仪表盘；
新增：图表监听器新增destroy、onDestroy函数，用于处理图表销毁事件；
新增：SQL数据集、数据管理查询条件、数据导入/导出、SQL工作台新增SQL防注入配置，增强系统安全性；
新增：登录需填写验证码，并限制登录尝试次数，增强系统安全性；
新增：注册需填写验证码，增强系统安全性；
修复：修复数据导出SQL会添加多余标识符引号的BUG；
修复：修复在数据表查询页面打开的导出页面中点击【确定】按钮后会导致父页面自动刷新的BUG；
改进：看板支持以"../global/*"的方式引入全局资源，便于浏览器跨看板缓存全局资源；
改进：内置折线图、柱图、嵌套饼图、散点图新增【类别】数据标记，便于绘制单数据集多系列图表；
改进：内置箱形图、主题河流图、象形柱图新增【类别】数据标记，便于绘制单数据集多系列图表；