@@ -690,6 +690,7 @@ DataGear版本更新日志
 
 新增：内置图表新增得分环、阶段仪表盘；
 新增：图表监听器新增destroy、onDestroy函数，用于处理图表销毁事件；
+新增：看板元素属性新增"dg-dashboard-unimport"，用于排除引入内置看板资源；
 新增：SQL数据集、数据管理查询条件、数据导入/导出、SQL工作台新增SQL防注入配置，增强系统安全性；
 新增：登录需填写验证码，并限制登录尝试次数，增强系统安全性；
 新增：注册需填写验证码，增强系统安全性；
